--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"chart.js": "^4.4.7"
+		"chart.js": "^4.4.7",
+		"svelte-bootstrap-icons": "^3.1.2"
 	}
 }
